syntactic_analyzer/tmp.output
State 169 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PROGRAM IDENT ';' corpo '.'
    2         | error IDENT ';' corpo '.'
    3         | PROGRAM error ';' corpo '.'
    4         | PROGRAM IDENT error corpo '.'
    5         | PROGRAM IDENT ';' corpo error
    6         | error ';' corpo '.'

    7 corpo: dc _BEGIN comandos END
    8      | dc error comandos END
    9      | dc _BEGIN comandos error

   10 dc: dc_c dc_v dc_p

   11 dc_c: CONST IDENT '=' numero ';' dc_c
   12     | %empty
   13     | CONST error '=' numero ';' dc_c
   14     | CONST IDENT error numero ';' dc_c
   15     | CONST IDENT '=' error ';' dc_c

   16 dc_v: VAR variaveis ':' tipo_var ';' dc_v
   17     | %empty
   18     | VAR variaveis error tipo_var ';' dc_v
   19     | VAR variaveis ':' tipo_var error dc_v

   20 tipo_var: REAL
   21         | INTEGER
   22         | error

   23 variaveis: IDENT mais_var

   24 mais_var: ',' variaveis
   25         | %empty

   26 dc_p: PROCEDURE IDENT parametros ';' corpo_p dc_p
   27     | %empty
   28     | PROCEDURE error parametros ';' corpo_p dc_p
   29     | PROCEDURE IDENT parametros error corpo_p dc_p

   30 parametros: '(' lista_par ')'
   31           | %empty
   32           | '(' lista_par error

   33 lista_par: variaveis ':' tipo_var mais_par

   34 mais_par: ';' lista_par
   35         | %empty

   36 corpo_p: dc_loc _BEGIN comandos END ';'
   37        | dc_loc error comandos END ';'
   38        | dc_loc _BEGIN comandos error ';'

   39 dc_loc: dc_v

   40 lista_arg: '(' argumentos ')'
   41          | %empty
   42          | error argumentos ')'
   43          | '(' argumentos error
   44          | '(' error ')'

   45 argumentos: IDENT mais_ident

   46 mais_ident: ';' argumentos
   47           | %empty

   48 pfalsa: ELSE cmd
   49       | %empty

   50 comandos: cmd ';' comandos
   51         | %empty

   52 cmd_read: READ '(' variaveis ')'
   53         | READ error variaveis ')'
   54         | READ '(' variaveis error
   55         | READ '(' error ')'

   56 cmd_write: WRITE '(' variaveis ')'
   57          | WRITE error variaveis ')'
   58          | WRITE '(' variaveis error
   59          | WRITE '(' error ')'

   60 cmd_while: WHILE '(' condicao ')' DO cmd
   61          | WHILE error condicao ')' DO cmd
   62          | WHILE '(' condicao error DO cmd
   63          | WHILE '(' condicao ')' error cmd
   64          | WHILE '(' error ')' DO cmd
   65          | WHILE '(' condicao ')' DO error

   66 cmd_if: IF condicao THEN cmd pfalsa

   67 cmd_assign: IDENT ":=" expressao
   68           | IDENT ":=" error

   69 cmd_fcall: IDENT lista_arg

   70 cmd_block_code: _BEGIN comandos END
   71               | _BEGIN error END

   72 cmd_for: FOR IDENT ":=" expressao TO expressao DO cmd
   73        | FOR error ":=" expressao TO expressao DO cmd
   74        | FOR IDENT error expressao TO expressao DO cmd
   75        | FOR IDENT ":=" expressao error expressao DO cmd
   76        | FOR IDENT ":=" expressao TO expressao error cmd
   77        | FOR IDENT ":=" error TO expressao DO cmd
   78        | FOR IDENT ":=" expressao TO error DO cmd
   79        | FOR IDENT ":=" expressao TO expressao DO error

   80 cmd: cmd_read
   81    | cmd_write
   82    | cmd_while
   83    | cmd_if
   84    | cmd_assign
   85    | cmd_fcall
   86    | cmd_block_code
   87    | cmd_for

   88 condicao: expressao relacao expressao
   89         | expressao error expressao
   90         | error relacao expressao
   91         | expressao relacao error

   92 relacao: '='
   93        | "<>"
   94        | ">="
   95        | "<="
   96        | '>'
   97        | '<'

   98 expressao: termo outros_termos

   99 op_un: '+'
  100      | '-'
  101      | %empty

  102 outros_termos: op_ad termo outros_termos
  103              | %empty
  104              | op_ad error outros_termos

  105 op_ad: '+'
  106      | '-'

  107 termo: op_un fator mais_fatores
  108      | error fator mais_fatores

  109 mais_fatores: op_mul fator mais_fatores
  110             | %empty
  111             | op_mul error mais_fatores

  112 op_mul: '*'
  113       | '/'

  114 fator: IDENT
  115      | numero
  116      | '(' expressao ')'

  117 numero: NUMERO_INT
  118       | NUMERO_REAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 30 32 40 43 44 52 54 55 56 58 59 60 62 63 64 65 116
')' (41) 30 40 42 44 52 53 55 56 57 59 60 61 63 64 65 116
'*' (42) 112
'+' (43) 99 105
',' (44) 24
'-' (45) 100 106
'.' (46) 1 2 3 4 6
'/' (47) 113
':' (58) 16 19 33
';' (59) 1 2 3 5 6 11 13 14 15 16 18 26 28 34 36 37 38 46 50
'<' (60) 97
'=' (61) 11 13 15 92
'>' (62) 96
error (256) 2 3 4 5 6 8 9 13 14 15 18 19 22 28 29 32 37 38 42 43 44
    53 54 55 57 58 59 61 62 63 64 65 68 71 73 74 75 76 77 78 79 89
    90 91 104 108 111
_BEGIN (258) 7 9 36 38 70 71
CONST (259) 11 13 14 15
DO (260) 60 61 62 64 65 72 73 74 75 77 78 79
ELSE (261) 48
END (262) 7 8 36 37 70 71
FOR (263) 72 73 74 75 76 77 78 79
IDENT (264) 1 2 4 5 11 14 15 23 26 29 45 67 68 69 72 74 75 76 77 78
    79 114
IF (265) 66
INTEGER (266) 21
NUMERO_INT (267) 117
NUMERO_REAL (268) 118
PROCEDURE (269) 26 28 29
PROGRAM (270) 1 3 4 5
READ (271) 52 53 54 55
REAL (272) 20
THEN (273) 66
TO (274) 72 73 74 76 77 78 79
VAR (275) 16 18 19
WHILE (276) 60 61 62 63 64 65
WRITE (277) 56 57 58 59
":=" (278) 67 68 72 73 75 76 77 78 79
"<>" (279) 93
">=" (280) 94
"<=" (281) 95


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 1 2 3 4 5 6, on right: 0
corpo (42)
    on left: 7 8 9, on right: 1 2 3 4 5 6
dc (43)
    on left: 10, on right: 7 8 9
dc_c (44)
    on left: 11 12 13 14 15, on right: 10 11 13 14 15
dc_v (45)
    on left: 16 17 18 19, on right: 10 16 18 19 39
tipo_var (46)
    on left: 20 21 22, on right: 16 18 19 33
variaveis (47)
    on left: 23, on right: 16 18 19 24 33 52 53 54 56 57 58
mais_var (48)
    on left: 24 25, on right: 23
dc_p (49)
    on left: 26 27 28 29, on right: 10 26 28 29
parametros (50)
    on left: 30 31 32, on right: 26 28 29
lista_par (51)
    on left: 33, on right: 30 32 34
mais_par (52)
    on left: 34 35, on right: 33
corpo_p (53)
    on left: 36 37 38, on right: 26 28 29
dc_loc (54)
    on left: 39, on right: 36 37 38
lista_arg (55)
    on left: 40 41 42 43 44, on right: 69
argumentos (56)
    on left: 45, on right: 40 42 43 46
mais_ident (57)
    on left: 46 47, on right: 45
pfalsa (58)
    on left: 48 49, on right: 66
comandos (59)
    on left: 50 51, on right: 7 8 9 36 37 38 50 70
cmd_read (60)
    on left: 52 53 54 55, on right: 80
cmd_write (61)
    on left: 56 57 58 59, on right: 81
cmd_while (62)
    on left: 60 61 62 63 64 65, on right: 82
cmd_if (63)
    on left: 66, on right: 83
cmd_assign (64)
    on left: 67 68, on right: 84
cmd_fcall (65)
    on left: 69, on right: 85
cmd_block_code (66)
    on left: 70 71, on right: 86
cmd_for (67)
    on left: 72 73 74 75 76 77 78 79, on right: 87
cmd (68)
    on left: 80 81 82 83 84 85 86 87, on right: 48 50 60 61 62 63 64
    66 72 73 74 75 76 77 78
condicao (69)
    on left: 88 89 90 91, on right: 60 61 62 63 65 66
relacao (70)
    on left: 92 93 94 95 96 97, on right: 88 90 91
expressao (71)
    on left: 98, on right: 67 72 73 74 75 76 77 78 79 88 89 90 91 116
op_un (72)
    on left: 99 100 101, on right: 107
outros_termos (73)
    on left: 102 103 104, on right: 98 102 104
op_ad (74)
    on left: 105 106, on right: 102 104
termo (75)
    on left: 107 108, on right: 98 102
mais_fatores (76)
    on left: 109 110 111, on right: 107 108 109 111
op_mul (77)
    on left: 112 113, on right: 109 111
fator (78)
    on left: 114 115 116, on right: 107 108 109
numero (79)
    on left: 117 118, on right: 11 13 14 115


State 0

    0 $accept: . programa $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    programa  go to state 3


State 1

    2 programa: error . IDENT ';' corpo '.'
    6         | error . ';' corpo '.'

    IDENT  shift, and go to state 4
    ';'    shift, and go to state 5


State 2

    1 programa: PROGRAM . IDENT ';' corpo '.'
    3         | PROGRAM . error ';' corpo '.'
    4         | PROGRAM . IDENT error corpo '.'
    5         | PROGRAM . IDENT ';' corpo error

    error  shift, and go to state 6
    IDENT  shift, and go to state 7


State 3

    0 $accept: programa . $end

    $end  shift, and go to state 8


State 4

    2 programa: error IDENT . ';' corpo '.'

    ';'  shift, and go to state 9


State 5

    6 programa: error ';' . corpo '.'

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    corpo  go to state 11
    dc     go to state 12
    dc_c   go to state 13


State 6

    3 programa: PROGRAM error . ';' corpo '.'

    ';'  shift, and go to state 14


State 7

    1 programa: PROGRAM IDENT . ';' corpo '.'
    4         | PROGRAM IDENT . error corpo '.'
    5         | PROGRAM IDENT . ';' corpo error

    error  shift, and go to state 15
    ';'    shift, and go to state 16


State 8

    0 $accept: programa $end .

    $default  accept


State 9

    2 programa: error IDENT ';' . corpo '.'

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    corpo  go to state 17
    dc     go to state 12
    dc_c   go to state 13


State 10

   11 dc_c: CONST . IDENT '=' numero ';' dc_c
   13     | CONST . error '=' numero ';' dc_c
   14     | CONST . IDENT error numero ';' dc_c
   15     | CONST . IDENT '=' error ';' dc_c

    error  shift, and go to state 18
    IDENT  shift, and go to state 19


State 11

    6 programa: error ';' corpo . '.'

    '.'  shift, and go to state 20


State 12

    7 corpo: dc . _BEGIN comandos END
    8      | dc . error comandos END
    9      | dc . _BEGIN comandos error

    error   shift, and go to state 21
    _BEGIN  shift, and go to state 22


State 13

   10 dc: dc_c . dc_v dc_p

    VAR  shift, and go to state 23

    $default  reduce using rule 17 (dc_v)

    dc_v  go to state 24


State 14

    3 programa: PROGRAM error ';' . corpo '.'

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    corpo  go to state 25
    dc     go to state 12
    dc_c   go to state 13


State 15

    4 programa: PROGRAM IDENT error . corpo '.'

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    corpo  go to state 26
    dc     go to state 12
    dc_c   go to state 13


State 16

    1 programa: PROGRAM IDENT ';' . corpo '.'
    5         | PROGRAM IDENT ';' . corpo error

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    corpo  go to state 27
    dc     go to state 12
    dc_c   go to state 13


State 17

    2 programa: error IDENT ';' corpo . '.'

    '.'  shift, and go to state 28


State 18

   13 dc_c: CONST error . '=' numero ';' dc_c

    '='  shift, and go to state 29


State 19

   11 dc_c: CONST IDENT . '=' numero ';' dc_c
   14     | CONST IDENT . error numero ';' dc_c
   15     | CONST IDENT . '=' error ';' dc_c

    error  shift, and go to state 30
    '='    shift, and go to state 31


State 20

    6 programa: error ';' corpo '.' .

    $default  reduce using rule 6 (programa)


State 21

    8 corpo: dc error . comandos END

    _BEGIN  shift, and go to state 32
    FOR     shift, and go to state 33
    IDENT   shift, and go to state 34
    IF      shift, and go to state 35
    READ    shift, and go to state 36
    WHILE   shift, and go to state 37
    WRITE   shift, and go to state 38

    $default  reduce using rule 51 (comandos)

    comandos        go to state 39
    cmd_read        go to state 40
    cmd_write       go to state 41
    cmd_while       go to state 42
    cmd_if          go to state 43
    cmd_assign      go to state 44
    cmd_fcall       go to state 45
    cmd_block_code  go to state 46
    cmd_for         go to state 47
    cmd             go to state 48


State 22

    7 corpo: dc _BEGIN . comandos END
    9      | dc _BEGIN . comandos error

    _BEGIN  shift, and go to state 32
    FOR     shift, and go to state 33
    IDENT   shift, and go to state 34
    IF      shift, and go to state 35
    READ    shift, and go to state 36
    WHILE   shift, and go to state 37
    WRITE   shift, and go to state 38

    $default  reduce using rule 51 (comandos)

    comandos        go to state 49
    cmd_read        go to state 40
    cmd_write       go to state 41
    cmd_while       go to state 42
    cmd_if          go to state 43
    cmd_assign      go to state 44
    cmd_fcall       go to state 45
    cmd_block_code  go to state 46
    cmd_for         go to state 47
    cmd             go to state 48


State 23

   16 dc_v: VAR . variaveis ':' tipo_var ';' dc_v
   18     | VAR . variaveis error tipo_var ';' dc_v
   19     | VAR . variaveis ':' tipo_var error dc_v

    IDENT  shift, and go to state 50

    variaveis  go to state 51


State 24

   10 dc: dc_c dc_v . dc_p

    PROCEDURE  shift, and go to state 52

    $default  reduce using rule 27 (dc_p)

    dc_p  go to state 53


State 25

    3 programa: PROGRAM error ';' corpo . '.'

    '.'  shift, and go to state 54


State 26

    4 programa: PROGRAM IDENT error corpo . '.'

    '.'  shift, and go to state 55


State 27

    1 programa: PROGRAM IDENT ';' corpo . '.'
    5         | PROGRAM IDENT ';' corpo . error

    error  shift, and go to state 56
    '.'    shift, and go to state 57


State 28

    2 programa: error IDENT ';' corpo '.' .

    $default  reduce using rule 2 (programa)


State 29

   13 dc_c: CONST error '=' . numero ';' dc_c

    NUMERO_INT   shift, and go to state 58
    NUMERO_REAL  shift, and go to state 59

    numero  go to state 60


State 30

   14 dc_c: CONST IDENT error . numero ';' dc_c

    NUMERO_INT   shift, and go to state 58
    NUMERO_REAL  shift, and go to state 59

    numero  go to state 61


State 31

   11 dc_c: CONST IDENT '=' . numero ';' dc_c
   15     | CONST IDENT '=' . error ';' dc_c

    error        shift, and go to state 62
    NUMERO_INT   shift, and go to state 58
    NUMERO_REAL  shift, and go to state 59

    numero  go to state 63


State 32

   70 cmd_block_code: _BEGIN . comandos END
   71               | _BEGIN . error END

    error   shift, and go to state 64
    _BEGIN  shift, and go to state 32
    FOR     shift, and go to state 33
    IDENT   shift, and go to state 34
    IF      shift, and go to state 35
    READ    shift, and go to state 36
    WHILE   shift, and go to state 37
    WRITE   shift, and go to state 38

    END  reduce using rule 51 (comandos)

    comandos        go to state 65
    cmd_read        go to state 40
    cmd_write       go to state 41
    cmd_while       go to state 42
    cmd_if          go to state 43
    cmd_assign      go to state 44
    cmd_fcall       go to state 45
    cmd_block_code  go to state 46
    cmd_for         go to state 47
    cmd             go to state 48


State 33

   72 cmd_for: FOR . IDENT ":=" expressao TO expressao DO cmd
   73        | FOR . error ":=" expressao TO expressao DO cmd
   74        | FOR . IDENT error expressao TO expressao DO cmd
   75        | FOR . IDENT ":=" expressao error expressao DO cmd
   76        | FOR . IDENT ":=" expressao TO expressao error cmd
   77        | FOR . IDENT ":=" error TO expressao DO cmd
   78        | FOR . IDENT ":=" expressao TO error DO cmd
   79        | FOR . IDENT ":=" expressao TO expressao DO error

    error  shift, and go to state 66
    IDENT  shift, and go to state 67


State 34

   67 cmd_assign: IDENT . ":=" expressao
   68           | IDENT . ":=" error
   69 cmd_fcall: IDENT . lista_arg

    error  shift, and go to state 68
    ":="   shift, and go to state 69
    '('    shift, and go to state 70

    ELSE  reduce using rule 41 (lista_arg)
    ';'   reduce using rule 41 (lista_arg)

    lista_arg  go to state 71


State 35

   66 cmd_if: IF . condicao THEN cmd pfalsa

    error  shift, and go to state 72
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    condicao   go to state 75
    expressao  go to state 76
    op_un      go to state 77
    termo      go to state 78


State 36

   52 cmd_read: READ . '(' variaveis ')'
   53         | READ . error variaveis ')'
   54         | READ . '(' variaveis error
   55         | READ . '(' error ')'

    error  shift, and go to state 79
    '('    shift, and go to state 80


State 37

   60 cmd_while: WHILE . '(' condicao ')' DO cmd
   61          | WHILE . error condicao ')' DO cmd
   62          | WHILE . '(' condicao error DO cmd
   63          | WHILE . '(' condicao ')' error cmd
   64          | WHILE . '(' error ')' DO cmd
   65          | WHILE . '(' condicao ')' DO error

    error  shift, and go to state 81
    '('    shift, and go to state 82


State 38

   56 cmd_write: WRITE . '(' variaveis ')'
   57          | WRITE . error variaveis ')'
   58          | WRITE . '(' variaveis error
   59          | WRITE . '(' error ')'

    error  shift, and go to state 83
    '('    shift, and go to state 84


State 39

    8 corpo: dc error comandos . END

    END  shift, and go to state 85


State 40

   80 cmd: cmd_read .

    $default  reduce using rule 80 (cmd)


State 41

   81 cmd: cmd_write .

    $default  reduce using rule 81 (cmd)


State 42

   82 cmd: cmd_while .

    $default  reduce using rule 82 (cmd)


State 43

   83 cmd: cmd_if .

    $default  reduce using rule 83 (cmd)


State 44

   84 cmd: cmd_assign .

    $default  reduce using rule 84 (cmd)


State 45

   85 cmd: cmd_fcall .

    $default  reduce using rule 85 (cmd)


State 46

   86 cmd: cmd_block_code .

    $default  reduce using rule 86 (cmd)


State 47

   87 cmd: cmd_for .

    $default  reduce using rule 87 (cmd)


State 48

   50 comandos: cmd . ';' comandos

    ';'  shift, and go to state 86


State 49

    7 corpo: dc _BEGIN comandos . END
    9      | dc _BEGIN comandos . error

    error  shift, and go to state 87
    END    shift, and go to state 88


State 50

   23 variaveis: IDENT . mais_var

    ','  shift, and go to state 89

    $default  reduce using rule 25 (mais_var)

    mais_var  go to state 90


State 51

   16 dc_v: VAR variaveis . ':' tipo_var ';' dc_v
   18     | VAR variaveis . error tipo_var ';' dc_v
   19     | VAR variaveis . ':' tipo_var error dc_v

    error  shift, and go to state 91
    ':'    shift, and go to state 92


State 52

   26 dc_p: PROCEDURE . IDENT parametros ';' corpo_p dc_p
   28     | PROCEDURE . error parametros ';' corpo_p dc_p
   29     | PROCEDURE . IDENT parametros error corpo_p dc_p

    error  shift, and go to state 93
    IDENT  shift, and go to state 94


State 53

   10 dc: dc_c dc_v dc_p .

    $default  reduce using rule 10 (dc)


State 54

    3 programa: PROGRAM error ';' corpo '.' .

    $default  reduce using rule 3 (programa)


State 55

    4 programa: PROGRAM IDENT error corpo '.' .

    $default  reduce using rule 4 (programa)


State 56

    5 programa: PROGRAM IDENT ';' corpo error .

    $default  reduce using rule 5 (programa)


State 57

    1 programa: PROGRAM IDENT ';' corpo '.' .

    $default  reduce using rule 1 (programa)


State 58

  117 numero: NUMERO_INT .

    $default  reduce using rule 117 (numero)


State 59

  118 numero: NUMERO_REAL .

    $default  reduce using rule 118 (numero)


State 60

   13 dc_c: CONST error '=' numero . ';' dc_c

    ';'  shift, and go to state 95


State 61

   14 dc_c: CONST IDENT error numero . ';' dc_c

    ';'  shift, and go to state 96


State 62

   15 dc_c: CONST IDENT '=' error . ';' dc_c

    ';'  shift, and go to state 97


State 63

   11 dc_c: CONST IDENT '=' numero . ';' dc_c

    ';'  shift, and go to state 98


State 64

   71 cmd_block_code: _BEGIN error . END

    END  shift, and go to state 99


State 65

   70 cmd_block_code: _BEGIN comandos . END

    END  shift, and go to state 100


State 66

   73 cmd_for: FOR error . ":=" expressao TO expressao DO cmd

    ":="  shift, and go to state 101


State 67

   72 cmd_for: FOR IDENT . ":=" expressao TO expressao DO cmd
   74        | FOR IDENT . error expressao TO expressao DO cmd
   75        | FOR IDENT . ":=" expressao error expressao DO cmd
   76        | FOR IDENT . ":=" expressao TO expressao error cmd
   77        | FOR IDENT . ":=" error TO expressao DO cmd
   78        | FOR IDENT . ":=" expressao TO error DO cmd
   79        | FOR IDENT . ":=" expressao TO expressao DO error

    error  shift, and go to state 102
    ":="   shift, and go to state 103


State 68

   42 lista_arg: error . argumentos ')'

    IDENT  shift, and go to state 104

    argumentos  go to state 105


State 69

   67 cmd_assign: IDENT ":=" . expressao
   68           | IDENT ":=" . error

    error  shift, and go to state 106
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    expressao  go to state 107
    op_un      go to state 77
    termo      go to state 78


State 70

   40 lista_arg: '(' . argumentos ')'
   43          | '(' . argumentos error
   44          | '(' . error ')'

    error  shift, and go to state 108
    IDENT  shift, and go to state 104

    argumentos  go to state 109


State 71

   69 cmd_fcall: IDENT lista_arg .

    $default  reduce using rule 69 (cmd_fcall)


State 72

   90 condicao: error . relacao expressao
  108 termo: error . fator mais_fatores

    IDENT        shift, and go to state 110
    NUMERO_INT   shift, and go to state 58
    NUMERO_REAL  shift, and go to state 59
    "<>"         shift, and go to state 111
    ">="         shift, and go to state 112
    "<="         shift, and go to state 113
    '='          shift, and go to state 114
    '('          shift, and go to state 115
    '>'          shift, and go to state 116
    '<'          shift, and go to state 117

    relacao  go to state 118
    fator    go to state 119
    numero   go to state 120


State 73

   99 op_un: '+' .

    $default  reduce using rule 99 (op_un)


State 74

  100 op_un: '-' .

    $default  reduce using rule 100 (op_un)


State 75

   66 cmd_if: IF condicao . THEN cmd pfalsa

    THEN  shift, and go to state 121


State 76

   88 condicao: expressao . relacao expressao
   89         | expressao . error expressao
   91         | expressao . relacao error

    error  shift, and go to state 122
    "<>"   shift, and go to state 111
    ">="   shift, and go to state 112
    "<="   shift, and go to state 113
    '='    shift, and go to state 114
    '>'    shift, and go to state 116
    '<'    shift, and go to state 117

    relacao  go to state 123


State 77

  107 termo: op_un . fator mais_fatores

    IDENT        shift, and go to state 110
    NUMERO_INT   shift, and go to state 58
    NUMERO_REAL  shift, and go to state 59
    '('          shift, and go to state 115

    fator   go to state 124
    numero  go to state 120


State 78

   98 expressao: termo . outros_termos

    '+'  shift, and go to state 125
    '-'  shift, and go to state 126

    $default  reduce using rule 103 (outros_termos)

    outros_termos  go to state 127
    op_ad          go to state 128


State 79

   53 cmd_read: READ error . variaveis ')'

    IDENT  shift, and go to state 50

    variaveis  go to state 129


State 80

   52 cmd_read: READ '(' . variaveis ')'
   54         | READ '(' . variaveis error
   55         | READ '(' . error ')'

    error  shift, and go to state 130
    IDENT  shift, and go to state 50

    variaveis  go to state 131


State 81

   61 cmd_while: WHILE error . condicao ')' DO cmd

    error  shift, and go to state 72
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    condicao   go to state 132
    expressao  go to state 76
    op_un      go to state 77
    termo      go to state 78


State 82

   60 cmd_while: WHILE '(' . condicao ')' DO cmd
   62          | WHILE '(' . condicao error DO cmd
   63          | WHILE '(' . condicao ')' error cmd
   64          | WHILE '(' . error ')' DO cmd
   65          | WHILE '(' . condicao ')' DO error

    error  shift, and go to state 133
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    condicao   go to state 134
    expressao  go to state 76
    op_un      go to state 77
    termo      go to state 78


State 83

   57 cmd_write: WRITE error . variaveis ')'

    IDENT  shift, and go to state 50

    variaveis  go to state 135


State 84

   56 cmd_write: WRITE '(' . variaveis ')'
   58          | WRITE '(' . variaveis error
   59          | WRITE '(' . error ')'

    error  shift, and go to state 136
    IDENT  shift, and go to state 50

    variaveis  go to state 137


State 85

    8 corpo: dc error comandos END .

    $default  reduce using rule 8 (corpo)


State 86

   50 comandos: cmd ';' . comandos

    _BEGIN  shift, and go to state 32
    FOR     shift, and go to state 33
    IDENT   shift, and go to state 34
    IF      shift, and go to state 35
    READ    shift, and go to state 36
    WHILE   shift, and go to state 37
    WRITE   shift, and go to state 38

    $default  reduce using rule 51 (comandos)

    comandos        go to state 138
    cmd_read        go to state 40
    cmd_write       go to state 41
    cmd_while       go to state 42
    cmd_if          go to state 43
    cmd_assign      go to state 44
    cmd_fcall       go to state 45
    cmd_block_code  go to state 46
    cmd_for         go to state 47
    cmd             go to state 48


State 87

    9 corpo: dc _BEGIN comandos error .

    $default  reduce using rule 9 (corpo)


State 88

    7 corpo: dc _BEGIN comandos END .

    $default  reduce using rule 7 (corpo)


State 89

   24 mais_var: ',' . variaveis

    IDENT  shift, and go to state 50

    variaveis  go to state 139


State 90

   23 variaveis: IDENT mais_var .

    $default  reduce using rule 23 (variaveis)


State 91

   18 dc_v: VAR variaveis error . tipo_var ';' dc_v

    error    shift, and go to state 140
    INTEGER  shift, and go to state 141
    REAL     shift, and go to state 142

    tipo_var  go to state 143


State 92

   16 dc_v: VAR variaveis ':' . tipo_var ';' dc_v
   19     | VAR variaveis ':' . tipo_var error dc_v

    error    shift, and go to state 140
    INTEGER  shift, and go to state 141
    REAL     shift, and go to state 142

    tipo_var  go to state 144


State 93

   28 dc_p: PROCEDURE error . parametros ';' corpo_p dc_p

    '('  shift, and go to state 145

    $default  reduce using rule 31 (parametros)

    parametros  go to state 146


State 94

   26 dc_p: PROCEDURE IDENT . parametros ';' corpo_p dc_p
   29     | PROCEDURE IDENT . parametros error corpo_p dc_p

    '('  shift, and go to state 145

    $default  reduce using rule 31 (parametros)

    parametros  go to state 147


State 95

   13 dc_c: CONST error '=' numero ';' . dc_c

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    dc_c  go to state 148


State 96

   14 dc_c: CONST IDENT error numero ';' . dc_c

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    dc_c  go to state 149


State 97

   15 dc_c: CONST IDENT '=' error ';' . dc_c

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    dc_c  go to state 150


State 98

   11 dc_c: CONST IDENT '=' numero ';' . dc_c

    CONST  shift, and go to state 10

    $default  reduce using rule 12 (dc_c)

    dc_c  go to state 151


State 99

   71 cmd_block_code: _BEGIN error END .

    $default  reduce using rule 71 (cmd_block_code)


State 100

   70 cmd_block_code: _BEGIN comandos END .

    $default  reduce using rule 70 (cmd_block_code)


State 101

   73 cmd_for: FOR error ":=" . expressao TO expressao DO cmd

    error  shift, and go to state 152
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    expressao  go to state 153
    op_un      go to state 77
    termo      go to state 78


State 102

   74 cmd_for: FOR IDENT error . expressao TO expressao DO cmd

    error  shift, and go to state 152
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    expressao  go to state 154
    op_un      go to state 77
    termo      go to state 78


State 103

   72 cmd_for: FOR IDENT ":=" . expressao TO expressao DO cmd
   75        | FOR IDENT ":=" . expressao error expressao DO cmd
   76        | FOR IDENT ":=" . expressao TO expressao error cmd
   77        | FOR IDENT ":=" . error TO expressao DO cmd
   78        | FOR IDENT ":=" . expressao TO error DO cmd
   79        | FOR IDENT ":=" . expressao TO expressao DO error

    error  shift, and go to state 155
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    expressao  go to state 156
    op_un      go to state 77
    termo      go to state 78


State 104

   45 argumentos: IDENT . mais_ident

    ';'  shift, and go to state 157

    $default  reduce using rule 47 (mais_ident)

    mais_ident  go to state 158


State 105

   42 lista_arg: error argumentos . ')'

    ')'  shift, and go to state 159


State 106

   68 cmd_assign: IDENT ":=" error .
  108 termo: error . fator mais_fatores

    IDENT        shift, and go to state 110
    NUMERO_INT   shift, and go to state 58
    NUMERO_REAL  shift, and go to state 59
    '('          shift, and go to state 115

    $default  reduce using rule 68 (cmd_assign)

    fator   go to state 119
    numero  go to state 120


State 107

   67 cmd_assign: IDENT ":=" expressao .

    $default  reduce using rule 67 (cmd_assign)


State 108

   44 lista_arg: '(' error . ')'

    ')'  shift, and go to state 160


State 109

   40 lista_arg: '(' argumentos . ')'
   43          | '(' argumentos . error

    error  shift, and go to state 161
    ')'    shift, and go to state 162


State 110

  114 fator: IDENT .

    $default  reduce using rule 114 (fator)


State 111

   93 relacao: "<>" .

    $default  reduce using rule 93 (relacao)


State 112

   94 relacao: ">=" .

    $default  reduce using rule 94 (relacao)


State 113

   95 relacao: "<=" .

    $default  reduce using rule 95 (relacao)


State 114

   92 relacao: '=' .

    $default  reduce using rule 92 (relacao)


State 115

  116 fator: '(' . expressao ')'

    error  shift, and go to state 152
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    expressao  go to state 163
    op_un      go to state 77
    termo      go to state 78


State 116

   96 relacao: '>' .

    $default  reduce using rule 96 (relacao)


State 117

   97 relacao: '<' .

    $default  reduce using rule 97 (relacao)


State 118

   90 condicao: error relacao . expressao

    error  shift, and go to state 152
    '+'    shift, and go to state 73
    '-'    shift, and go to state 74

    IDENT        reduce using rule 101 (op_un)
    NUMERO_INT   reduce using rule 101 (op_un)
    NUMERO_REAL  reduce using rule 101 (op_un)
    '('          reduce using rule 101 (op_un)

    expressao  go to state 164
    op_un      go to state 77
    termo      go to state 78


State 119

  108 termo: error fator . mais_fatores

    '*'  shift, and go to state 165
    '/'  shift, and go to state 166

    $default  reduce using rule 110 (mais_fatores)

    mais_fatores  go to state 167
    op_mul        go to state 168


State 120

  115 fator: numero .

    $default  reduce using rule 115 (fator)


State 121
